--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,6 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.14.92</domain>
         <domain includeSubdomains="true">50.17.211.163</domain>
+        <domain includeSubdomains="true">192.168.10.37</domain>
 
     </domain-config>
 </network-security-config>
